--- a/styles.css
+++ b/styles.css
@@ -397,7 +397,7 @@ body{
     line-height: 18px; 
 }
 
-@media only screen and (max-width: 1000px) {
+/* @media only screen and (max-width: 1000px) {
     body {
       background-color: red;
     }
@@ -418,4 +418,4 @@ body{
       }
     }
       
-}
+} */
